--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/piedra": "^0.1.0",
     "@firebase/firestore": "^1.14.4",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.4.0",
@@ -15,6 +17,7 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "expo": "~37.0.3",
+    "expo-font": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "firebase": "^7.9.0",
@@ -27,10 +30,11 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.7.1",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-web": "~0.11.7",
+    "react-navigation-animated-switch": "^0.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
